# compilers

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  input2.lang  input4.lang  make-release.sh  shell.nix
src/: CMakeLists.txt  main.c
src/asm/: CMakeLists.txt  asm.c  asm.h
src/format/: CMakeLists.txt  format.c  format.h
src/intermediary-code/: CMakeLists.txt  intermediary-code.c  intermediary-code.h  print-intermediary-code.c
src/lex/: CMakeLists.txt  grammar.y  lex.l  tokenization.h  tokens.h
src/lex/symbols/: CMakeLists.txt  symbols.c  symbols.h
src/lex/syntax-tree/: CMakeLists.txt  syntax-tree.c  syntax-tree.h
src/semantic-check/: CMakeLists.txt  semantic-check.c  semantic-check.h
